# fluent-check

./: .eslintignore  .eslintrc  .gitignore  .mocharc.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RESPONSE_TO_REVIEW.md  TECH_DEBT_PLAN.md  benchmark-parser.py  benchmark.sh  coverage.txt  eslint.config.js  package-lock.json  package.json  review_of_commit_524.md  stryker.conf.json  test-filter.ts  test-shrinking-strategy.ts  tsconfig.json  tsconfig.types.json
.github/: dependabot.yml  labeler.yml
analysis/: .gitignore  README.md  adversarial_patterns.py  base.py  beta_prior_comparison.py  biased_sampling.py  caching_tradeoff.py  calibration.py  chained_ci_validation.py  chained_distribution.py  ci_calibration.py  ci_calibration_advanced.py  ci_convergence.py  composition_depth.py  constants.py  corner_case_coverage.py  correlation_effects.py  deduplication.py  detection.py  double_negation.py  early_termination.py  efficiency.py  exists.py  filter_cascade.py  lazy_shrinking_boundary.py  lazy_shrinking_simulation.py  length_distribution.py  mapped_size.py  pyproject.toml  sample_budget.py  shrinking.py  shrinking_ci_calibration.py  shrinking_fairness.py  shrinking_strategies_comparison.py  shrinking_strategies_comparison.py.template  stats.py  streaming_accuracy.py  util.py  viz.py  warm_start_shrinking.py  (+1 more)
docs/: actions.md  architecture.md  chained-type-inference.md  composable-arbitraries.md  corner-case-prioritization.md  customizable-strategies.md  fluent-api.md  given-when-then-pattern.md  given-when-then.md  pr-415-specs-summary.md  quantifiers.md  (+6 more)
(+777 files in other folders)
