[project]
name = "fluent-check-evidence"
version = "0.1.0"
description = "Evidence analysis and visualization for FluentCheck confidence-based termination"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
